--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -1,9 +1,9 @@
 <%- include("partials/header.ejs") %>
-<div class="add-page-container">
+<div class="add-product-container">
     <form action="/add-product" method="post" class="add-prod-form">
-        <label for="prodname">Product Name</label>
+        <label for="prodname">Product Name:</label>
         <input type="text" name="prodname" placeholder="Enter product name">
-        <label for="prodimg">Product Image Link</label>
+        <label for="prodimg">Product Image Link:</label>
         <input type="text" name="prodimg" placeholder="Enter product image link">
         <button type="submit">Add</button>
     </form>
