--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MVC Bakery App</title>
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href=<%= page === "home"? "/styles/home.css": null%>>
+    <link rel="stylesheet" href=<%= page === "add-product"? "/styles/add-product.css": null%>>
 </head>
 <body>
     <nav class="main-nav">
